# Thanox

./: .gitignore  .gitmodules  0-Home.md  1-Intro.md  10-Privacy-Statements.md  2-Install-Activate.md  3-Lazy-Mode.md  4-Activity-Replace.md  5-Start-Rules.md  6-Profile.md  7-Ref.md  8-Q-A.md  9- Feedback.md  Gemfile  README.md  _config.yml  index.md
.circleci/: config.yml
.github/: dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: profile_pr_en.md
.github/__workflows/: app.yml  plugins.yml  publish-packages.yml
.github/workflows/: app.yml  jekyll.yaml  magisk-module.yml  plugins.yml  publish-packages.yml
_data/en/: l10n.yml  navigation.yml  strings.yml
_data/zh/: l10n.yml  navigation.yml  strings.yml
_includes/: header_custom.html  lang-switcher.html
_layouts/: default.html
_site/: index.html
_site/docs/: activity_trampoline.html  bg_restrict.html  bg_start.html  clean-tasks.html  feedback.html  install_active.html  intro.html  privacy-cheat.html  privacy_statement.html  profile.html  qa.html  reference.html  smart-freeze.html  xmode.html
_site/en/: index.html
_site/zh/: index.html
android/: .gitignore  TODO  build.gradle  build.gradle.kts  checkstyle.gradle  gradle.properties  lombok.config  settings.gradle  settings.gradle.kts  thanos.properties  versions.gradle
android/android_framework/: publish_packages.gradle  publish_packages_aar.gradle
android/android_framework/patch-magisk/module/src/main/cpp/: AppHook.cpp  AppHook.h  CMakeLists.txt  Main.cpp  RootHook.cpp  ThanoxBridge.cpp  ThanoxBridge.h
android/android_framework/patch-magisk/module/src/main/cpp/core/: AppHook.cpp  HookCommon.h  RootHook.cpp  RootHook.h  TelephonyProps.h  ThanoxBridge.cpp  ThanoxBridge.h
android/android_framework/patch-magisk/module/src/main/cpp/helper/: JniHelper.cpp  JniHelper.h  Log.h
android/android_framework/patch-magisk/module/src/main/cpp/xh/: xh_core.c  xh_log.c  xh_log.h
android/android_framework/patch-magisk/module/src/main/cpp/zygisk/: thanox.cpp
android/android_sdk/: framework.aidl  thanos.aidl
android/annotation_processors/: publish_packages.gradle
android/app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro  rhino.json  thanos_properties.gradle
android/app_shizuku/: build.gradle.kts  proguard-rules.pro
android/buildSrc/: build.gradle.kts
android/checkstyle/: checkstyle.xml  checkstyle_suppressions.xml
android/scripts/: build_plugins.sh  (+8 more)
doc_src/: mkdocs.yml
docs/: .gitignore  404.html  _config.yml  aboutme.md  index.html  sitemap.xml
plugins/: available_plugins
priv/: privacy-agreement.html  privacy-agreement.txt
(+3453 files in other folders)
